[package]
name = "rs-grooming"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.14"
itertools = "0.10.0"
regex = "1.5.3"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
